; ModuleID = '/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap.c_eap_get_eapSessionId.c'
source_filename = "/home/carl/AnghaBench/freebsd/contrib/wpa/src/eap_peer/extr_eap.c_eap_get_eapSessionId.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.eap_sm = type { i64, i32* }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32* @eap_get_eapSessionId(%struct.eap_sm* %0, i64* %1) #0 {
  %3 = alloca i32*, align 8
  %4 = alloca %struct.eap_sm*, align 8
  %5 = alloca i64*, align 8
  store %struct.eap_sm* %0, %struct.eap_sm** %4, align 8
  store i64* %1, i64** %5, align 8
  %6 = load %struct.eap_sm*, %struct.eap_sm** %4, align 8
  %7 = icmp eq %struct.eap_sm* %6, null
  br i1 %7, label %13, label %8

8:                                                ; preds = %2
  %9 = load %struct.eap_sm*, %struct.eap_sm** %4, align 8
  %10 = getelementptr inbounds %struct.eap_sm, %struct.eap_sm* %9, i32 0, i32 1
  %11 = load i32*, i32** %10, align 8
  %12 = icmp eq i32* %11, null
  br i1 %12, label %13, label %15

13:                                               ; preds = %8, %2
  %14 = load i64*, i64** %5, align 8
  store i64 0, i64* %14, align 8
  store i32* null, i32** %3, align 8
  br label %23

15:                                               ; preds = %8
  %16 = load %struct.eap_sm*, %struct.eap_sm** %4, align 8
  %17 = getelementptr inbounds %struct.eap_sm, %struct.eap_sm* %16, i32 0, i32 0
  %18 = load i64, i64* %17, align 8
  %19 = load i64*, i64** %5, align 8
  store i64 %18, i64* %19, align 8
  %20 = load %struct.eap_sm*, %struct.eap_sm** %4, align 8
  %21 = getelementptr inbounds %struct.eap_sm, %struct.eap_sm* %20, i32 0, i32 1
  %22 = load i32*, i32** %21, align 8
  store i32* %22, i32** %3, align 8
  br label %23

23:                                               ; preds = %15, %13
  %24 = load i32*, i32** %3, align 8
  ret i32* %24
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
